--- a/docg_coreRealm/pom.xml
+++ b/docg_coreRealm/pom.xml
@@ -102,6 +102,13 @@
             <artifactId>arcadedb-network</artifactId>
             <version>${arcadedb.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.12</version>
+        </dependency>
+
 
         <!--
         Testing libs
