--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -1,5 +1,6 @@
 //Can be NEO4J or ARCADEDB
-CORE_REALM_STORAGE_IMPL_TECH = NEO4J
+//CORE_REALM_STORAGE_IMPL_TECH = NEO4J
+CORE_REALM_STORAGE_IMPL_TECH = ARCADEDB
 
 //Common configuration properties
 COMMON_DATA_ORIGIN = dataOrigin001
@@ -20,3 +21,9 @@ NEO4J_SUPPORT_MULTI_GRAPH = false
 NEO4J_URI = bolt://localhost:7687
 NEO4J_USER = neo4j
 NEO4J_PASSWORD = wyc4docg
+
+//ArcadeDB Implements configuration properties
+ARCADEDB_SERVER_ADDRESS = localhost
+ARCADEDB_SERVER_PORT = 2480
+ARCADEDB_USER = root
+ARCADEDB_PASSWORD = wyc4docg
