update for ArcadeDB multi-realm support

--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -27,3 +27,4 @@ ARCADEDB_SERVER_ADDRESS = localhost
 ARCADEDB_SERVER_PORT = 2480
 ARCADEDB_USER = root
 ARCADEDB_PASSWORD = wyc4docg
+ARCADEDB_DEFAULT_REALM_NAME = DOCG_DefaultRealm
