--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -1,6 +1,6 @@
 //Can be NEO4J or ARCADEDB
 //CORE_REALM_STORAGE_IMPL_TECH = NEO4J
-CORE_REALM_STORAGE_IMPL_TECH = ARCADEDB
+CORE_REALM_STORAGE_IMPL_TECH = NEO4J
 
 //Common configuration properties
 COMMON_DATA_ORIGIN = dataOrigin001
@@ -16,6 +16,9 @@ CLUSTER_RESOURCE_CACHE_SERVICE_LOCATION = terracotta://127.0.0.1:9410/clustered
 CLUSTER_RESOURCE_CACHE_SERVICE_DEFAULT_RESOURCE_ID = main
 CLUSTER_RESOURCE_CACHE_SERVICE_SHARE_RESOURCE_ID = primary-server-resource
 
+//Database Common Configuration
+DEFAULT_REALM_NAME = DOCG_DefaultRealm
+
 //Neo4j Implements configuration properties
 NEO4J_SUPPORT_MULTI_GRAPH = false
 NEO4J_URI = bolt://localhost:7687
@@ -27,4 +30,3 @@ ARCADEDB_SERVER_ADDRESS = localhost
 ARCADEDB_SERVER_PORT = 2480
 ARCADEDB_USER = root
 ARCADEDB_PASSWORD = wyc4docg
-ARCADEDB_DEFAULT_REALM_NAME = DOCG_DefaultRealm
