update for NubulaGraph database support

--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -1,6 +1,6 @@
 //Can be NEO4J or ARCADEDB
-//CORE_REALM_STORAGE_IMPL_TECH = NEO4J
 CORE_REALM_STORAGE_IMPL_TECH = NEO4J
+//CORE_REALM_STORAGE_IMPL_TECH = ARCADEDB
 
 //Common configuration properties
 COMMON_DATA_ORIGIN = dataOrigin001
@@ -30,3 +30,9 @@ ARCADEDB_SERVER_ADDRESS = localhost
 ARCADEDB_SERVER_PORT = 2480
 ARCADEDB_USER = root
 ARCADEDB_PASSWORD = wyc4docg
+
+//NubulaGraph Implements configuration properties
+NEBULAGRAPH_SERVER_ADDRESS = localhost
+NEBULAGRAPH_SERVER_PORT = 9669
+NEBULAGRAPH_USER = root
+NEBULAGRAPH_PASSWORD = wyc4docg
