--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -1,6 +1,6 @@
-//Can be NEO4J or ARCADEDB
+//Can be NEO4J or ARCADEDB or NEBULAGRAPH
 CORE_REALM_STORAGE_IMPL_TECH = NEO4J
-//CORE_REALM_STORAGE_IMPL_TECH = ARCADEDB
+//CORE_REALM_STORAGE_IMPL_TECH = NEBULAGRAPH
 
 //Common configuration properties
 COMMON_DATA_ORIGIN = dataOrigin001
