--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -36,3 +36,5 @@ NEBULAGRAPH_SERVER_ADDRESS = localhost
 NEBULAGRAPH_SERVER_PORT = 9669
 NEBULAGRAPH_USER = root
 NEBULAGRAPH_PASSWORD = wyc4docg
+NEBULAGRAPH_PARTITION_NUMBER = 10
+NEBULAGRAPH_REPLICA_FACTOR = 1
