--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -1,6 +1,6 @@
 //Can be NEO4J or ARCADEDB or NEBULAGRAPH
 //CORE_REALM_STORAGE_IMPL_TECH = NEO4J
-CORE_REALM_STORAGE_IMPL_TECH = NEBULAGRAPH
+CORE_REALM_STORAGE_IMPL_TECH = NEO4J
 
 //Common configuration properties
 COMMON_DATA_ORIGIN = dataOrigin001
@@ -23,7 +23,7 @@ DEFAULT_REALM_NAME = DOCG_DefaultRealm
 NEO4J_SUPPORT_MULTI_GRAPH = false
 NEO4J_URI = bolt://localhost:7687
 NEO4J_USER = neo4j
-NEO4J_PASSWORD = wyc4docg
+NEO4J_PASSWORD = wyc
 
 //ArcadeDB Implements configuration properties
 ARCADEDB_SERVER_ADDRESS = localhost
