update for DataServiceObserver feature

--- a/docg_dataCompute/configurations/dataComputeGlobalConfiguration.properties
+++ b/docg_dataCompute/configurations/dataComputeGlobalConfiguration.properties
@@ -9,3 +9,7 @@ dataStorePartitionsNumber=10
 #ATOMIC or TRANSACTIONAL
 dataStoreAtomicityMode=ATOMIC
 dataStoreRegionName=Default_DataStore_Region
+# data service observer
+# if there are multi IPs, use , to separate them
+# for example: 192.168.0.1:10800,192.168.0.2:10800
+observedUnitIPs = 127.0.0.1:10800
