--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -23,7 +23,7 @@ DEFAULT_REALM_NAME = DOCG_DefaultRealm
 NEO4J_SUPPORT_MULTI_GRAPH = false
 NEO4J_URI = bolt://localhost:7687
 NEO4J_USER = neo4j
-NEO4J_PASSWORD = wyc
+NEO4J_PASSWORD = wyc4docg
 
 //ArcadeDB Implements configuration properties
 ARCADEDB_SERVER_ADDRESS = localhost
