--- a/docg_analysisProvider/pom.xml
+++ b/docg_analysisProvider/pom.xml
@@ -13,7 +13,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <spark.version>3.4.1</spark.version>
         <flink.version>1.17.1</flink.version>
-        <datasyslab.geotools.version>geotools-24.1</datasyslab.geotools.version>
+        <datasyslab.geotools.version>1.5.1-28.2</datasyslab.geotools.version>
         <geotools.version>26.4</geotools.version>
         <sedona.version>1.4.1</sedona.version>
         <akka.version>2.7.0</akka.version>
@@ -50,24 +50,51 @@
             <artifactId>spark-mllib_2.12</artifactId>
             <version>${spark.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.sedona/sedona-core-3.0 -->
+
+        <!-- https://mvnrepository.com/artifact/org.apache.sedona/sedona-core-3.0
         <dependency>
             <groupId>org.apache.sedona</groupId>
             <artifactId>sedona-core-3.4_2.12</artifactId>
             <version>${sedona.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.sedona/sedona-sql-3.0 -->
+        -->
+        <!-- https://mvnrepository.com/artifact/org.apache.sedona/sedona-sql-3.0
         <dependency>
             <groupId>org.apache.sedona</groupId>
             <artifactId>sedona-sql-3.4_2.12</artifactId>
             <version>${sedona.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.sedona/sedona-viz-3.0 -->
+        -->
+        <!-- https://mvnrepository.com/artifact/org.apache.sedona/sedona-viz-3.0
         <dependency>
             <groupId>org.apache.sedona</groupId>
             <artifactId>sedona-viz-3.4_2.12</artifactId>
             <version>${sedona.version}</version>
         </dependency>
+        -->
+
+
+
+
+        <dependency>
+            <groupId>org.apache.sedona</groupId>
+            <artifactId>sedona-spark-shaded-3.5_2.12</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+        <!-- Optional: https://mvnrepository.com/artifact/org.datasyslab/geotools-wrapper -->
+        <!-- https://mvnrepository.com/artifact/org.datasyslab/geotools-wrapper -->
+        <dependency>
+            <groupId>org.datasyslab</groupId>
+            <artifactId>geotools-wrapper</artifactId>
+            <version>1.5.1-28.2</version>
+        </dependency>
+
+
+
+
+
+
+
         <!-- https://mvnrepository.com/artifact/org.locationtech.jts/jts-core -->
         <dependency>
             <groupId>org.locationtech.jts</groupId>
