--- a/docg_coreRealm_arcadedb_impl/pom.xml
+++ b/docg_coreRealm_arcadedb_impl/pom.xml
@@ -32,6 +32,13 @@
             <artifactId>arcadedb-network</artifactId>
             <version>${arcadedb.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.12</version>
+        </dependency>
+
         <dependency>
             <groupId>com.viewfunction</groupId>
             <artifactId>docg_coreRealm</artifactId>
