--- a/docg_coreRealm/pom.xml
+++ b/docg_coreRealm/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <neo4j.version>5.22.0</neo4j.version>
-        <neo4j-cypher-dsl.version>2023.9.7</neo4j-cypher-dsl.version>
+        <neo4j-cypher-dsl.version>2024.0.1</neo4j-cypher-dsl.version>
         <geotools.version>29.1</geotools.version>
     </properties>
 
@@ -96,6 +96,12 @@
             <artifactId>testng</artifactId>
             <version>6.14.3</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>24.1.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
