update for DatCompute Model code refactor

--- a/docg_dataCompute/pom.xml
+++ b/docg_dataCompute/pom.xml
@@ -74,7 +74,25 @@
             <artifactId>docg_coreRealm</artifactId>
             <version>1.1</version>
         </dependency>
+
+        <!--
+        Testing libs
+        -->
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.10.2</version>
+
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>24.1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
+
     <repositories>
         <repository>
             <id>osgeo</id>
