update for AnalyseResponse defect fixing

--- a/docg_analysisProvider/analysisProviderConfiguration.properties
+++ b/docg_analysisProvider/analysisProviderConfiguration.properties
@@ -1,4 +1,4 @@
-applicationName=DOCG Analysis Provider
+applicationName=Data Ocean & Cloud Graph - Analysis Provider
 applicationVersion=1.0.0#20211227
 applicationExitCommand=exit
 # SPARK Configuration
