--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /docg_coreRealm_nebulaGraph_impl/target/
 /docg_coreRealm_arcadedb_impl/target/
 /docg_analysisProvider/internalDB/
+/docg_analysisProvider/derby.log
