Add message queue support and config, refactor constants

--- a/docg_analysisProvider/analysisProviderConfiguration.properties
+++ b/docg_analysisProvider/analysisProviderConfiguration.properties
@@ -19,3 +19,5 @@ providerCommunicationPort=8084
 providerMaximumDataTransformFrameSize=1000g
 # Data Slice Configuration
 massDataOperationParallelism=10
+# Message Queue Configuration
+messageBrokerAddress=localhost:8081
