--- a/docg_analysisProvider/pom.xml
+++ b/docg_analysisProvider/pom.xml
@@ -15,7 +15,7 @@
         <flink.version>1.20.0</flink.version>
         <datasyslab.geotools.version>1.5.1-28.2</datasyslab.geotools.version>
         <geotools.version>26.4</geotools.version>
-        <sedona.version>1.6.1</sedona.version>
+        <sedona.version>1.7.0</sedona.version>
         <akka.version>2.7.0</akka.version>
         <derby.version>10.15.2.0</derby.version>
         <rocketmq-client-java-version>5.0.7</rocketmq-client-java-version>
@@ -59,55 +59,17 @@
         <!--
          SEDONA Related
         -->
-        <!-- https://mvnrepository.com/artifact/org.apache.sedona/sedona-core-3.0
-        <dependency>
-            <groupId>org.apache.sedona</groupId>
-            <artifactId>sedona-core-3.4_2.12</artifactId>
-            <version>${sedona.version}</version>
-        </dependency>
-        -->
-        <!-- https://mvnrepository.com/artifact/org.apache.sedona/sedona-sql-3.0
-        <dependency>
-            <groupId>org.apache.sedona</groupId>
-            <artifactId>sedona-sql-3.4_2.12</artifactId>
-            <version>${sedona.version}</version>
-        </dependency>
-        -->
-        <!-- https://mvnrepository.com/artifact/org.apache.sedona/sedona-viz-3.0
-        <dependency>
-            <groupId>org.apache.sedona</groupId>
-            <artifactId>sedona-viz-3.4_2.12</artifactId>
-            <version>${sedona.version}</version>
-        </dependency>
-        -->
-        <!-- https://mvnrepository.com/artifact/org.apache.sedona/sedona-common -->
-        <dependency>
-            <groupId>org.apache.sedona</groupId>
-            <artifactId>sedona-common</artifactId>
-            <version>${sedona.version}</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.sedona/sedona-spark-common-3.5 -->
-        <dependency>
-            <groupId>org.apache.sedona</groupId>
-            <artifactId>sedona-spark-common-3.5_2.12</artifactId>
-            <version>1.6.0</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.sedona/sedona-sql-3.4 -->
-        <dependency>
-            <groupId>org.apache.sedona</groupId>
-            <artifactId>sedona-sql-3.4_2.12</artifactId>
-            <version>1.4.1</version>
-        </dependency>
         <dependency>
             <groupId>org.apache.sedona</groupId>
             <artifactId>sedona-spark-shaded-3.5_2.12</artifactId>
             <version>${sedona.version}</version>
         </dependency>
-        <!-- Optional: https://mvnrepository.com/artifact/org.datasyslab/geotools-wrapper
+        <!-- Optional: https://mvnrepository.com/artifact/org.datasyslab/geotools-wrapper -->
+        <!--
         <dependency>
             <groupId>org.datasyslab</groupId>
             <artifactId>geotools-wrapper</artifactId>
-            <version>1.6.0-28.2</version>
+            <version>1.7.0-28.5</version>
         </dependency>
         -->
 
