--- a/docg_coreRealm/pom.xml
+++ b/docg_coreRealm/pom.xml
@@ -87,6 +87,18 @@
             <version>${geotools.version}</version>
         </dependency>
 
+        <!-- External DataExchange -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.30</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.54</version>
+        </dependency>
+
         <!--
         Testing libs
         -->
