--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -1,6 +1,6 @@
-//Can be NEO4J or ARCADEDB or NEBULAGRAPH
-//CORE_REALM_STORAGE_IMPL_TECH = NEO4J
+//Can be NEO4J | ARCADEDB | NEBULAGRAPH | MEMGRAPH | TUGRAPH
 CORE_REALM_STORAGE_IMPL_TECH = NEO4J
+//CORE_REALM_STORAGE_IMPL_TECH = MEMGRAPH
 
 //Common configuration properties
 COMMON_DATA_ORIGIN = dataOrigin001
@@ -24,6 +24,10 @@ NEO4J_SUPPORT_MULTI_GRAPH = false
 NEO4J_URI = bolt://localhost:7687
 NEO4J_USER = neo4j
 NEO4J_PASSWORD = wyc4docg
+
+//NEO4J_URI = bolt://192.168.3.240:7687
+//NEO4J_USER = neo4j
+//NEO4J_PASSWORD = wyc4docg
 
 //ArcadeDB Implements configuration properties
 ARCADEDB_SERVER_ADDRESS = localhost
