--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -25,9 +25,9 @@ NEO4J_URI = bolt://localhost:7687
 NEO4J_USER = neo4j
 NEO4J_PASSWORD = wyc4docg
 
-//NEO4J_URI = bolt://192.168.3.240:7687
-//NEO4J_USER = neo4j
-//NEO4J_PASSWORD = wyc4docg
+//MemGraph Implements configuration properties
+MEMGRAPH_SUPPORT_MULTI_GRAPH = false
+//NEO4J_URI = bolt://127.0.0.1:7687
 
 //ArcadeDB Implements configuration properties
 ARCADEDB_SERVER_ADDRESS = localhost
