Add DefaultRelationDBExternalAttributesValueAccessProcessor and RelationDBQueryBuilder

--- a/docg_coreRealm/pom.xml
+++ b/docg_coreRealm/pom.xml
@@ -93,6 +93,17 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.30</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jooq/jooq -->
+        <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jooq</artifactId>
+            <version>3.14.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.7.1</version>
+        </dependency>
 
         <!--
         Testing libs
