Disable Neo4j conn pool, add TuGraph props, enhance GraphOpExecutor

--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -21,7 +21,7 @@ DEFAULT_REALM_NAME = DOCG_DefaultRealm
 
 //Neo4j Implements configuration properties
 NEO4J_SUPPORT_MULTI_GRAPH = false
-NEO4J_USING_CONNECTION_POOL = true
+NEO4J_USING_CONNECTION_POOL = false
 NEO4J_MAX_CONNECTION_POOL_SIZE = 100
 NEO4J_CONNECTION_ACQUISITION_TIMEOUT_SECONDS = 10
 NEO4J_URI = bolt://localhost:7687
@@ -31,6 +31,12 @@ NEO4J_PASSWORD = wyc4docg
 //MemGraph Implements configuration properties
 //MEMGRAPH_SUPPORT_MULTI_GRAPH = false
 //NEO4J_URI = bolt://192.168.3.240:7687
+
+//TuGraph Implements configuration properties
+//NEO4J_SUPPORT_EXPLICIT_TRANSACTION = false
+//NEO4J_URI = bolt://192.168.1.30:7689
+//NEO4J_USER = admin
+//NEO4J_PASSWORD = Wyc19771123!
 
 //ArcadeDB Implements configuration properties
 ARCADEDB_SERVER_ADDRESS = localhost
