--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -37,6 +37,7 @@ NEO4J_PASSWORD = wyc4docg
 //NEO4J_URI = bolt://192.168.1.30:7689
 //NEO4J_USER = admin
 //NEO4J_PASSWORD = Wyc19771123!
+//NEO4J_DATABASE_NAME = default
 
 //ArcadeDB Implements configuration properties
 ARCADEDB_SERVER_ADDRESS = localhost
