Add TuGraph support and update CoreRealm config

--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -1,6 +1,7 @@
-//Can be NEO4J | ARCADEDB | NEBULAGRAPH | MEMGRAPH | TUGRAPH
+//Can be NEO4J | MEMGRAPH | TUGRAPH
 CORE_REALM_STORAGE_IMPL_TECH = NEO4J
 //CORE_REALM_STORAGE_IMPL_TECH = MEMGRAPH
+//CORE_REALM_STORAGE_IMPL_TECH = TUGRAPH
 
 //Common configuration properties
 COMMON_DATA_ORIGIN = dataOrigin001
@@ -36,19 +37,6 @@ NEO4J_PASSWORD = wyc4docg
 //NEO4J_SUPPORT_EXPLICIT_TRANSACTION = false
 //NEO4J_URI = bolt://192.168.1.30:7689
 //NEO4J_USER = admin
-//NEO4J_PASSWORD = Wyc4docg!
+//NEO4J_PASSWORD = Wyc19771123!
 //NEO4J_DEFAULT_DATABASE_NAME = default
 
-//ArcadeDB Implements configuration properties
-ARCADEDB_SERVER_ADDRESS = localhost
-ARCADEDB_SERVER_PORT = 2480
-ARCADEDB_USER = root
-ARCADEDB_PASSWORD = wyc4docg
-
-//NubulaGraph Implements configuration properties
-NEBULAGRAPH_SERVER_ADDRESS = localhost
-NEBULAGRAPH_SERVER_PORT = 9669
-NEBULAGRAPH_USER = root
-NEBULAGRAPH_PASSWORD = wyc4docg
-NEBULAGRAPH_PARTITION_NUMBER = 10
-NEBULAGRAPH_REPLICA_FACTOR = 1
