Add MinIO integration for external attributes value access

--- a/docg_coreRealm/pom.xml
+++ b/docg_coreRealm/pom.xml
@@ -110,6 +110,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.6.7.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.minio/minio -->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.5.17</version>
+        </dependency>
 
         <!--
         Testing libs
