--- a/docg_coreRealm/pom.xml
+++ b/docg_coreRealm/pom.xml
@@ -116,6 +116,12 @@
             <artifactId>minio</artifactId>
             <version>8.5.17</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.iotdb/iotdb-jdbc -->
+        <dependency>
+            <groupId>org.apache.iotdb</groupId>
+            <artifactId>iotdb-jdbc</artifactId>
+            <version>1.3.4</version>
+        </dependency>
 
         <!--
         Testing libs
