--- a/docg_coreRealm/pom.xml
+++ b/docg_coreRealm/pom.xml
@@ -122,6 +122,12 @@
             <artifactId>iotdb-jdbc</artifactId>
             <version>2.0.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.iotdb/iotdb-session -->
+        <dependency>
+            <groupId>org.apache.iotdb</groupId>
+            <artifactId>iotdb-session</artifactId>
+            <version>2.0.3</version>
+        </dependency>
 
         <!--
         Testing libs
