--- a/docg_dataFabric/pom.xml
+++ b/docg_dataFabric/pom.xml
@@ -14,6 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <drools-version>10.0.0</drools-version>
         <junit-version>4.13.1</junit-version>
+        <rocketmq-client-java-version>5.0.8</rocketmq-client-java-version>
     </properties>
 
     <dependencies>
@@ -73,18 +74,27 @@
             <groupId>org.drools</groupId>
             <artifactId>drools-xml-support</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.drools</groupId>
             <artifactId>drools-mvel</artifactId>
         </dependency>
-
         <!-- https://mvnrepository.com/artifact/com.yomahub/liteflow-core -->
         <dependency>
             <groupId>com.yomahub</groupId>
             <artifactId>liteflow-core</artifactId>
             <version>2.13.2.1</version>
         </dependency>
+        <!--
+        RocketMQ Related
+        -->
+        <!-- https://mvnrepository.com/artifact/org.apache.rocketmq/rocketmq-client-java -->
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client-java</artifactId>
+            <version>${rocketmq-client-java-version}</version>
+        </dependency>
+
+
         <!--
             Testing Related
         -->
