--- a/docg_dataFabric/pom.xml
+++ b/docg_dataFabric/pom.xml
@@ -93,7 +93,12 @@
             <artifactId>rocketmq-client-java</artifactId>
             <version>${rocketmq-client-java-version}</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.apache.rocketmq/rocketmq-client -->
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>5.3.3</version>
+        </dependency>
 
         <!--
             Testing Related
