--- a/docg_dataFabric/pom.xml
+++ b/docg_dataFabric/pom.xml
@@ -99,6 +99,15 @@
             <artifactId>rocketmq-client</artifactId>
             <version>5.3.3</version>
         </dependency>
+        <!--
+        DataChangeEventBus Related
+        -->
+        <!-- https://mvnrepository.com/artifact/com.lmax/disruptor -->
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>4.0.0</version>
+        </dependency>
 
         <!--
             Testing Related
