--- a/docg_artificialIntelligence/pom.xml
+++ b/docg_artificialIntelligence/pom.xml
@@ -12,6 +12,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <langchain4j.version>1.1.0</langchain4j.version>
     </properties>
 
     <dependencies>
@@ -34,14 +35,44 @@
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j</artifactId>
-            <version>1.0.0-beta2</version>
+            <version>${langchain4j.version}</version>
         </dependency>
         <!-- LangChain4j OpenAI 集成 -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-open-ai</artifactId>
-            <version>1.0.0-beta2</version>
+            <version>${langchain4j.version}</version>
         </dependency>
+
+
+
+
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-open-ai</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-core</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <!-- SLF4J API -->
         <dependency>
             <groupId>org.slf4j</groupId>
