--- a/docg_artificialIntelligence/pom.xml
+++ b/docg_artificialIntelligence/pom.xml
@@ -32,5 +32,37 @@
             <artifactId>neo4j-java-driver</artifactId>
             <version>${neo4j.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.viewfunction</groupId>
+            <artifactId>docg_coreRealm</artifactId>
+            <version>1.1</version>
+        </dependency>
+
+
+
+
+
+        <!-- Common tools lib -->
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.30</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+
+
+
+
     </dependencies>
 </project>
