Support multiple LLM providers in text-to-query

--- a/docg_artificialIntelligence/AIComponentConfiguration.properties
+++ b/docg_artificialIntelligence/AIComponentConfiguration.properties
@@ -1,3 +1,5 @@
+//OpenAI or Ollama
+TEXT2CYPHER_TECHNOLOGY = OpenAI
 TEXT2CYPHER_MODEL_NAME = deepseek-chat
 TEXT2CYPHER_MODEL_BASEURL = https://api.deepseek.com/v1
 TEXT2CYPHER_MODEL_APIKEY = sk-ea43df124d9c4d45a684af8c8fee1fed
