Enhance text-to-query response processing and configuration

--- a/docg_artificialIntelligence/AIComponentConfiguration.properties
+++ b/docg_artificialIntelligence/AIComponentConfiguration.properties
@@ -1,4 +1,7 @@
-//OpenAI or Ollama
+#OpenAI or Ollama
+# TEXT2CYPHER_TECHNOLOGY = Ollama
+# TEXT2CYPHER_MODEL_NAME = qwen3:8b
+# TEXT2CYPHER_MODEL_BASEURL = http://127.0.0.1:11434
 TEXT2CYPHER_TECHNOLOGY = OpenAI
 TEXT2CYPHER_MODEL_NAME = deepseek-chat
 TEXT2CYPHER_MODEL_BASEURL = https://api.deepseek.com/v1
