--- a/docg_artificialIntelligence/AIComponentConfiguration.properties
+++ b/docg_artificialIntelligence/AIComponentConfiguration.properties
@@ -6,3 +6,8 @@ TEXT2CYPHER_TECHNOLOGY = OpenAI
 TEXT2CYPHER_MODEL_NAME = deepseek-chat
 TEXT2CYPHER_MODEL_BASEURL = https://api.deepseek.com/v1
 TEXT2CYPHER_MODEL_APIKEY = sk-ea43df124d9c4d45a684af8c8fee1fed
+
+DYNAMIC_CONTENT_INSIGHT_TECHNOLOGY = OpenAI
+DYNAMIC_CONTENT_INSIGHT_MODEL_NAME = deepseek-chat
+DYNAMIC_CONTENT_INSIGHT_MODEL_BASEURL = https://api.deepseek.com/v1
+DYNAMIC_CONTENT_INSIGHT_MODEL_APIKEY = sk-ea43df124d9c4d45a684af8c8fee1fed
