--- a/docg_coreRealm/CoreRealmCfg.properties
+++ b/docg_coreRealm/CoreRealmCfg.properties
@@ -26,6 +26,7 @@ NEO4J_USING_CONNECTION_POOL = false
 NEO4J_MAX_CONNECTION_POOL_SIZE = 100
 NEO4J_CONNECTION_ACQUISITION_TIMEOUT_SECONDS = 10
 NEO4J_URI = bolt://localhost:7687
+//NEO4J_URI = bolt://192.168.1.22:7687
 NEO4J_USER = neo4j
 NEO4J_PASSWORD = wyc4docg
 
