Update DeepSeek API base URL and API key

--- a/docg_artificialIntelligence/AIComponentConfiguration.properties
+++ b/docg_artificialIntelligence/AIComponentConfiguration.properties
@@ -4,10 +4,10 @@
 # TEXT2CYPHER_MODEL_BASEURL = http://127.0.0.1:11434
 TEXT2CYPHER_TECHNOLOGY = OpenAI
 TEXT2CYPHER_MODEL_NAME = deepseek-chat
-TEXT2CYPHER_MODEL_BASEURL = https://api.deepseek.com/v1
-TEXT2CYPHER_MODEL_APIKEY = sk-ea43df124d9c4d45a684af8c8fee1fed
+TEXT2CYPHER_MODEL_BASEURL = https://api.deepseek.com
+TEXT2CYPHER_MODEL_APIKEY = sk-d20b065fa56e4d08b614440f245fe827
 
 DYNAMIC_CONTENT_INSIGHT_TECHNOLOGY = OpenAI
 DYNAMIC_CONTENT_INSIGHT_MODEL_NAME = deepseek-chat
-DYNAMIC_CONTENT_INSIGHT_MODEL_BASEURL = https://api.deepseek.com/v1
-DYNAMIC_CONTENT_INSIGHT_MODEL_APIKEY = sk-ea43df124d9c4d45a684af8c8fee1fed
+DYNAMIC_CONTENT_INSIGHT_MODEL_BASEURL = https://api.deepseek.com
+DYNAMIC_CONTENT_INSIGHT_MODEL_APIKEY = sk-d20b065fa56e4d08b614440f245fe827
